# VANGUARD

./: .env.example  .gitignore  DELIVERY_COMPLETE.md  GAPS_AND_ROADMAP.md  GETTING_STARTED.md  GITHUB_COMMIT_HISTORY_PREVIEW.md  GITHUB_PUSH_GUIDE.md  GIT_COMMIT_PLAN.md  INDEX.md  INDEX_GITHUB_PUSH.md  LICENSE  Makefile  PRODUCTION_DEPLOYMENT.md  QUICK_GITHUB_SUMMARY.md  READINESS_CHECKLIST.md  README.md  README_GITHUB_SETUP.md  SETUP_AND_PRODUCTION.md  START_HERE.md  VALIDATION_CHECKLIST.md  docker-compose.yml
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_or_ux_improvement.yml  feature_request.yml  technical_debt.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260421_0001_init.py
apps/api/app/: main.py
apps/api/app/api/v1/routes/: health.py  misc.py  policies.py  pull_requests.py  releases.py  services.py
apps/api/app/config/: settings.py
apps/api/app/core/: errors.py  logging.py
apps/api/app/db/: models.py
apps/api/app/schemas/: domain.py
apps/api/app/services/: analysis_service.py  audit_service.py  data_store.py  eval_service.py  graph_service.py  health_service.py  insights_service.py  policy_service.py  pr_service.py  provider_service.py  release_service.py  risk_service.py
apps/api/app/workers/: seed.py
apps/api/tests/services/: test_policy_service.py  test_release_service.py  test_risk_service.py
apps/api/tests/smoke/: test_cors.py  test_health.py
scripts/: git-commit-plan.sh  quick-setup.sh
(+66 files in other folders)
